--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 /.vs
 /.VsCodeCounter
-/Example/.vs
-/Example/My Plugin/x64/
-/Example/x64/
+*.sh
 /Source/Plugins/doticu_skylib/x64
-
-/Example/My Plugin.dll
-meta.ini
+/Source/Plugins/doticu_skylib/include/doticu_skylib.edited
