--- a/Source/Plugins/doticu_skylib/doticu_skylib_vr.props
+++ b/Source/Plugins/doticu_skylib/doticu_skylib_vr.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <skse>$(ProjectDir)\..\..\..\..\skse 2.0.19;$(ProjectDir)\..\..\..\..\skse 2.0.19\skse64</skse>
+    <skse>$(ProjectDir)\..\..\..\..;$(ProjectDir)\..\..\..\..\..;$(ProjectDir)\..\..\..\..\skse64</skse>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
